# driver-client-template

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
driver/: CMakeLists.txt  driver_entry.cpp  driver_entry.h  main.cpp  main.h
shared/: shared.h
